--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,8 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a,b,c):\n",
-    "    for \n",
+    "    if a != b:\n",
+    "        retu\n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
