--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,8 @@
     "# Complete this function! \n",
     "def distance(a,b,c):\n",
     "    if a != b:\n",
-    "        retu\n",
+    "        return 'a does not equal b'\n",
+    "    \n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
