--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,8 @@
     "def distance(a,b,c):\n",
     "    if a != b:\n",
     "        return 'a does not equal b'\n",
-    "    \n",
+    "    for i in range(a):\n",
+    "        a\n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
