Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,8 +62,9 @@
     "def distance(a,b,c):\n",
     "    if a != b:\n",
     "        return 'a does not equal b'\n",
+    "    dist \n",
     "    for i in range(a):\n",
-    "        a\n",
+    "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
