--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,8 @@
     "        return 'a does not equal b'\n",
     "    dist = []\n",
     "    for i in range(a):\n",
-    "        dist\n",
+    "        dist.append(a[i] - b[i])\n",
+    "    \n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
