Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,6 +65,7 @@
     "    dist = []\n",
     "    for i in range(a):\n",
     "        dist.append(a[i] - b[i])\n",
+    "    total = 0\n",
     "    \n",
     "\n",
     "test_point_1 = (1, 2)\n",
