--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,8 @@
     "    for i in range(a):\n",
     "        dist.append(a[i] - b[i])\n",
     "    total = 0\n",
-    "    \n",
+    "    for i in dist:\n",
+    "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
