Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "        dist.append(a[i] - b[i])\n",
     "    total = 0\n",
     "    for i in dist:\n",
-    "        total \n",
+    "        total += abs(i)**c\n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
