Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "    if len(a) != len(b):\n",
     "        return 'a does not equal b'\n",
     "    dist = []\n",
-    "    for i in range(a):\n",
+    "    for i in range(len(a):\n",
     "        dist.append(a[i] - b[i])\n",
     "    total = 0\n",
     "    for i in dist:\n",
