--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
     "        dist.append(a[i] - b[i])\n",
     "    total = 0\n",
     "    for i in dist:\n",
-    "        total += abs(i)**c\n",
+    "        total += (abs(i)**c\n",
     "    return total\n",
     "\n",
     "test_point_1 = (1, 2)\n",
