Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
-      "7\n",
-      "91\n"
+      "7.0\n",
+      "7.0\n",
+      "7.0\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
     "        dist.append(a[i] - b[i])\n",
     "    total = 0\n",
     "    for i in dist:\n",
-    "        total += (abs(i)**c\n",
+    "        total += (abs(i)**c)**(1/c)\n",
     "    return total\n",
     "\n",
     "test_point_1 = (1, 2)\n",
