--- a/index.ipynb
+++ b/index.ipynb
@@ -78,10 +78,7 @@
     "    dist = []\n",
     "    for i in range(len(a)):\n",
     "        dist.append(a[i] - b[i])\n",
-    "    total = 0\n",
-    "    for i in dist:\n",
-    "        total += sum((abs(i)**c))**(1/c)\n",
-    "    return total\n",
+    "    print(dist)\n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
