--- a/index.ipynb
+++ b/index.ipynb
@@ -52,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3, -4]\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -69,7 +78,7 @@
     "\n",
     "# #test_point_1 = (1, 2)\n",
     "# test_point_2 = (4, 6)\n",
-    "# print(distance(test_point_1, test_point_2,c=1)) # Expected Output: 5.0\n",
+    "print(distance(test_point_1, test_point_2,c=1)) # Expected Output: 5.0\n",
     "# print(distance(test_point_1, test_point_2, c=2)) # Expected Output: 7.0\n",
     "# print(distance(test_point_1, test_point_2, c=3)) # Expected Output: 4.497941445275415"
    ]
