Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,9 @@
     "    dist = []\n",
     "    for i in range(len(a)):\n",
     "        dist.append(a[i] - b[i])\n",
-    "    f\n",
+    "    distance = 0\n",
+    "    for d in dist:\n",
+    "        \n",
     "\n",
     "# #test_point_1 = (1, 2)\n",
     "# test_point_2 = (4, 6)\n",
