--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "        dist.append(a[i] - b[i])\n",
     "    distance = 0\n",
     "    for d in dist:\n",
-    "        \n",
+    "        distance += \n",
     "\n",
     "# #test_point_1 = (1, 2)\n",
     "# test_point_2 = (4, 6)\n",
