Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,14 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3, -4]\n",
       "None\n"
      ]
     }
@@ -76,7 +75,7 @@
     "        dist.append(a[i] - b[i])\n",
     "    distance = 0\n",
     "    for d in dist:\n",
-    "        distance += abs(d)\n",
+    "        distance += (abs(d)**c)**1/c\n",
     "\n",
     "# #test_point_1 = (1, 2)\n",
     "# test_point_2 = (4, 6)\n",
