--- a/index.ipynb
+++ b/index.ipynb
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "7.0\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
     "    distance = 0\n",
     "    for d in dist:\n",
     "        distance += (abs(d)**c)**1/c\n",
-    "\n",
+    "    return distance\n",
     "# #test_point_1 = (1, 2)\n",
     "# test_point_2 = (4, 6)\n",
     "print(distance(test_point_1, test_point_2,c=1)) # Expected Output: 5.0\n",
