--- a/index.ipynb
+++ b/index.ipynb
@@ -52,14 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.0\n"
+      "7.0\n",
+      "12.5\n",
+      "30.333333333333332\n"
      ]
     }
    ],
@@ -75,13 +77,13 @@
     "        dist.append(a[i] - b[i])\n",
     "    distance = 0\n",
     "    for d in dist:\n",
-    "        distance += (abs(d)**c)**1/c\n",
+    "        distance += (abs(d)**c\n",
     "    return distance\n",
     "# #test_point_1 = (1, 2)\n",
     "# test_point_2 = (4, 6)\n",
     "print(distance(test_point_1, test_point_2,c=1)) # Expected Output: 5.0\n",
-    "# print(distance(test_point_1, test_point_2, c=2)) # Expected Output: 7.0\n",
-    "# print(distance(test_point_1, test_point_2, c=3)) # Expected Output: 4.497941445275415"
+    "print(distance(test_point_1, test_point_2, c=2)) # Expected Output: 7.0\n",
+    "print(distance(test_point_1, test_point_2, c=3)) # Expected Output: 4.497941445275415"
    ]
   },
   {
