Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,8 @@
      "output_type": "stream",
      "text": [
       "7.0\n",
-      "12.5\n",
-      "30.333333333333332\n"
+      "5.0\n",
+      "4.497941445275415\n"
      ]
     }
    ],
@@ -77,8 +77,8 @@
     "        dist.append(a[i] - b[i])\n",
     "    distance = 0\n",
     "    for d in dist:\n",
-    "        distance += (abs(d)**c\n",
-    "    return distance\n",
+    "        distance += abs(d)**c\n",
+    "    return distance**(1/c)\n",
     "# #test_point_1 = (1, 2)\n",
     "# test_point_2 = (4, 6)\n",
     "print(distance(test_point_1, test_point_2,c=1)) # Expected Output: 5.0\n",
