--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 17.939899665271266\n"
+    "   # Expected Output: 17.939899665271266\n",
+    "distance()"
    ]
   },
   {
