--- a/index.ipynb
+++ b/index.ipynb
@@ -110,6 +110,9 @@
    "outputs": [],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
+    "Point1 =  (-2, -3.4, 4, 15, 7)\n",
+    "\n",
+    "Point2 = (3, -1.2, -2, -1, 7)\n",
     "distance()"
    ]
   },
