--- a/index.ipynb
+++ b/index.ipynb
@@ -105,15 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.939899665271266"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
     "Point1 =  (-2, -3.4, 4, 15, 7)\n",
     "\n",
     "Point2 = (3, -1.2, -2, -1, 7)\n",
-    "distance()"
+    "distance(Point1,Point2,2)"
    ]
   },
   {
