--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 20.0"
+    "   # Expected Output: 20.0\n",
+    "Point1 = [0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
+    "Point  [1, -1, 5, 7, 14, 3, -2, 3, 3, 6]"
    ]
   },
   {
