Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "   # Expected Output: 20.0\n",
     "Point1 = [0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
-    "Point  [1, -1, 5, 7, 14, 3, -2, 3, 3, 6]"
+    "Point2 = [1, -1, 5, 7, 14, 3, -2, 3, 3, 6]"
    ]
   },
   {
