--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 5.268789659188307"
+    "   # Expected Output: 5.268789659188307\n",
+    "Point1 = (-2, 7, 3.4) Point 2: (3, 4, 1.5)"
    ]
   },
   {
