Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,9 @@
    "outputs": [],
    "source": [
     "   # Expected Output: 5.268789659188307\n",
-    "Point1 = (-2, 7, 3.4) Point 2: (3, 4, 1.5)"
+    "Point1 = (-2, 7, 3.4)\n",
+    "Point2 = (3, 4, 1.5)\n",
+    "distance(Point1,)"
    ]
   },
   {
